--- a/Kursovaya_C++.vcxproj.filters
+++ b/Kursovaya_C++.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="EditUserMenu.cpp">
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
+    <ClCompile Include="UserManagementMenu.cpp">
+      <Filter>Исходные файлы\Menu</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserMenu.h">
@@ -94,6 +97,12 @@
     </ClInclude>
     <ClInclude Include="EditUserMenu.h">
       <Filter>Файлы заголовков\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="UserManagementMenu.h">
+      <Filter>Файлы заголовков\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemSelection.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
