--- a/Kursovaya_C++.vcxproj.filters
+++ b/Kursovaya_C++.vcxproj.filters
@@ -19,11 +19,11 @@
     <Filter Include="Файлы заголовков\Menu">
       <UniqueIdentifier>{3479b9cc-7b23-4b2b-a350-0c2efc4db7dc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Исходные файлы\Users">
-      <UniqueIdentifier>{4a0fc02d-95d2-4f8e-bca6-0d4f37df2fcb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Файлы заголовков\Users">
+    <Filter Include="Файлы заголовков\Accounts">
       <UniqueIdentifier>{97294b44-f6ad-4948-ade7-6f1af8d442da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\Accounts">
+      <UniqueIdentifier>{4a0fc02d-95d2-4f8e-bca6-0d4f37df2fcb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -40,10 +40,7 @@
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
     <ClCompile Include="AccountHandler.cpp">
-      <Filter>Исходные файлы\Users</Filter>
-    </ClCompile>
-    <ClCompile Include="UserCredentials.cpp">
-      <Filter>Исходные файлы\Users</Filter>
+      <Filter>Исходные файлы\Accounts</Filter>
     </ClCompile>
     <ClCompile Include="Functions.cpp">
       <Filter>Исходные файлы</Filter>
@@ -51,16 +48,19 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="ShowUserMenu.cpp">
+    <ClCompile Include="Account.cpp">
+      <Filter>Исходные файлы\Accounts</Filter>
+    </ClCompile>
+    <ClCompile Include="AccountAddMenu.cpp">
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="AddUserMenu.cpp">
+    <ClCompile Include="AccountEditMenu.cpp">
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="EditUserMenu.cpp">
+    <ClCompile Include="AccountShowMenu.cpp">
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="UserManagementMenu.cpp">
+    <ClCompile Include="AccountManagementMenu.cpp">
       <Filter>Исходные файлы\Menu</Filter>
     </ClCompile>
   </ItemGroup>
@@ -78,31 +78,31 @@
       <Filter>Файлы заголовков\Menu</Filter>
     </ClInclude>
     <ClInclude Include="AccountHandler.h">
-      <Filter>Файлы заголовков\Users</Filter>
-    </ClInclude>
-    <ClInclude Include="UserCredentials.h">
-      <Filter>Файлы заголовков\Users</Filter>
+      <Filter>Файлы заголовков\Accounts</Filter>
     </ClInclude>
     <ClInclude Include="Functions.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="ShowUserMenu.h">
-      <Filter>Файлы заголовков\Menu</Filter>
-    </ClInclude>
-    <ClInclude Include="AddUserMenu.h">
-      <Filter>Файлы заголовков\Menu</Filter>
-    </ClInclude>
     <ClInclude Include="Includes.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="EditUserMenu.h">
-      <Filter>Файлы заголовков\Menu</Filter>
-    </ClInclude>
-    <ClInclude Include="UserManagementMenu.h">
-      <Filter>Файлы заголовков\Menu</Filter>
-    </ClInclude>
     <ClInclude Include="ItemSelection.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Account.h">
+      <Filter>Файлы заголовков\Accounts</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountAddMenu.h">
+      <Filter>Файлы заголовков\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountEditMenu.h">
+      <Filter>Файлы заголовков\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountShowMenu.h">
+      <Filter>Файлы заголовков\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountManagementMenu.h">
+      <Filter>Файлы заголовков\Menu</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
