--- a/Kursovaya_C++.vcxproj
+++ b/Kursovaya_C++.vcxproj
@@ -22,22 +22,48 @@
     <ClCompile Include="AccountHandler.cpp" />
     <ClCompile Include="AccountAddMenu.cpp" />
     <ClCompile Include="AdminMenu.cpp" />
+    <ClCompile Include="BodyTypeMenu.cpp" />
+    <ClCompile Include="Cabriolet.cpp" />
+    <ClCompile Include="Car.cpp" />
+    <ClCompile Include="CarHandler.cpp" />
     <ClCompile Include="ConsoleMenu.cpp" />
     <ClCompile Include="AccountEditMenu.cpp" />
+    <ClCompile Include="Crossover.cpp" />
+    <ClCompile Include="EngineTypeMenu.cpp" />
+    <ClCompile Include="FiveDoorHatchback.cpp" />
+    <ClCompile Include="FiveSeatMinivan.cpp" />
+    <ClCompile Include="FourDoorCoupe.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="LoginMenu.cpp" />
+    <ClCompile Include="LongWheelbaseSedan.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="AccountShowMenu.cpp" />
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountManagementMenu.cpp" />
+    <ClCompile Include="Sedan.cpp" />
+    <ClCompile Include="SevenSeatMinivan.cpp" />
+    <ClCompile Include="StationWagon.cpp" />
+    <ClCompile Include="ThreeDoorHatchback.cpp" />
+    <ClCompile Include="TransmissionTypeMenu.cpp" />
+    <ClCompile Include="TwoDoorCoupe.cpp" />
     <ClCompile Include="UserMenu.cpp" />
+    <ClCompile Include="WheelDriveMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountHandler.h" />
     <ClInclude Include="AccountAddMenu.h" />
     <ClInclude Include="AdminMenu.h" />
+    <ClInclude Include="BodyTypeMenu.h" />
+    <ClInclude Include="Cabriolet.h" />
+    <ClInclude Include="Car.h" />
+    <ClInclude Include="CarHandler.h" />
     <ClInclude Include="ConsoleMenu.h" />
     <ClInclude Include="AccountEditMenu.h" />
+    <ClInclude Include="Crossover.h" />
+    <ClInclude Include="EngineTypeMenu.h" />
+    <ClInclude Include="FiveDoorHatchback.h" />
+    <ClInclude Include="FiveSeatMinivan.h" />
+    <ClInclude Include="FourDoorCoupe.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Includes.h" />
     <ClInclude Include="ItemSelection.h" />
@@ -45,7 +71,15 @@
     <ClInclude Include="AccountShowMenu.h" />
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountManagementMenu.h" />
+    <ClInclude Include="LongWheelbaseSedan.h" />
+    <ClInclude Include="Sedan.h" />
+    <ClInclude Include="SevenSeatMinivan.h" />
+    <ClInclude Include="StationWagon.h" />
+    <ClInclude Include="ThreeDoorHatchback.h" />
+    <ClInclude Include="TransmissionTypeMenu.h" />
+    <ClInclude Include="TwoDoorCoupe.h" />
     <ClInclude Include="UserMenu.h" />
+    <ClInclude Include="WheelDriveMenu.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
